# sev-investigator

./: .gitignore  LICENSE  README.md  pyproject.toml  ui.py
samples/: example_trace.jsonl  incident_001_bad_deploy.json  incident_002_config_change.json  incident_003_dependency_outage.json
samples/eval_set/eval_001/: incident.json  reference_report.json
samples/eval_set/eval_002/: incident.json  reference_report.json
samples/eval_set/eval_003/: incident.json  reference_report.json
samples/eval_set/eval_004/: incident.json  reference_report.json
samples/eval_set/eval_005/: incident.json  reference_report.json
samples/eval_set/eval_006/: incident.json  reference_report.json
samples/incident_001_bad_deploy/fixtures/: get_config_diff.json  get_dependencies.json  get_metrics.json  get_recent_deploys.json  query_logs.json
samples/incident_002_config_change/fixtures/: get_config_diff.json  get_dependencies.json  get_metrics.json  get_recent_deploys.json  (+1 more)
src/: cli.py  llm.py  prompts.py
src/agent/: __init__.py  coordinator.py  critic.py  executor.py  planner.py  synthesizer.py
src/eval/: judge.py  runner.py
src/schemas/: __init__.py  agent_state.py  eval.py  incident.py  report.py  tools.py
src/skills/: __init__.py  base.py  config_change.py  dependency_outage.py  deploy_related.py
src/tools/: __init__.py  _config.py  get_config_diff.py  get_dependencies.py  get_metrics.py  get_recent_deploys.py  query_logs.py
src/traces/: recorder.py
tests/: conftest.py  test_coordinator.py  test_critic.py  test_schemas.py  test_skills.py  test_tools.py
(+33 files in other folders)
