[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sev-investigator"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.30",
    "pydantic>=2.0",
    "typer>=0.12",
    "rich>=13.0",
    "python-dotenv>=1.0",
]

[project.scripts]
sev-investigator = "sev_investigator.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "mypy>=1.10",
]
ui = [
    "streamlit>=1.35",
    "plotly>=5.0",
]

[tool.setuptools]
packages = [
    "sev_investigator",
    "sev_investigator.schemas",
    "sev_investigator.tools",
    "sev_investigator.skills",
    "sev_investigator.agent",
    "sev_investigator.traces",
    "sev_investigator.eval",
]
package-dir = {"sev_investigator" = "src"}

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
